// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component One should render correctly 1`] = `
<Fragment>
  <h1>
    Test heading
  </h1>
  <div
    className="candidatename"
  >
    <label>
      Candidatename
    </label>
    <ComponentTwo
      errorMessage="invalid candidate"
      handleChange={[Function]}
      isError={false}
      candidatename="testCandidate"
    />
  </div>
</Fragment>
`;

exports[`Component One should render correctly with children 1`] = `
<ComponentOne>
  <h1>
    Test heading
  </h1>
  <div
    className="candidatename"
  >
    <label>
      Candidatename
    </label>
    <ComponentTwo
      errorMessage="invalid candidate"
      handleChange={[Function]}
      isError={false}
      candidatename="testCandidate"
    >
      <input
        onChange={[Function]}
        type="text"
        value="testCandidate"
      />
    </ComponentTwo>
  </div>
</ComponentOne>
`;
